get2gnow #0000DDa09 - googly moogly there's a shit load here
Oh goodness I don't even know where to start.  I've made a ton of progress on get2gnow.  I have several new, and very cool new features & a lot of 'shiny' bits added.

To start of with I've finally finished all of my features for get2gnow's multiple account support.  I've added the ablity to delete old accounts, which also cleans up any avatars and the connections cookies file.  get2gnow can saftly have an account deleted even if its active & connected.  I've added a 'New' button as well.  You've never needed to really do anything, but type a server name, to start a new account.  Now its more intuitive & obvious for any one who may have been confused on how to add an account.

I've also finished my 'SoupMessage::restarted' handler so if authentication fails the request is only submitted 5 times, at most, or until authentication is successful.

I've programmed it so if all connections fail to authenticate, i.e. bad username & password, get2gnow will reset its appearance to indicate that it cannot connect.  Than the services' dialog is displayed so you can fix any errors.

I've also completely refactored get2gnow confirmation dialog making it much more extensible & flexible.

Another new feature I've added is back ground monitoring of @ replies/mentions & direct messages.  When you recieve any of them they are display in a notification message, using libnotify.  Direct messages & replies will also be appended to the update list, as they come in.

Direct messages are also formatted to grab your attention, both in the update list and in the notification popup.

I've also extended how get2gnow's stores geometry settings so the position of the veritical slider bar in get2gnow is remeber & restore - even after exiting & starting again.

I've further improved my debug output layer so it no longer runs into any string formatting issues.  Ditto for get2gnow's statusbar printf method.  Other improvements to my debug 

--- a/data/services-dialog.ui
+++ b/data/services-dialog.ui
@@ -264,6 +264,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -283,7 +285,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="services_save_button">
+              <object class="GtkButton" id="service_save_button">
                 <property name="label" translatable="yes">gtk-save</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -308,7 +310,7 @@
     <action-widgets>
       <action-widget response="-6">cancel_button</action-widget>
       <action-widget response="-5">services_okay_button</action-widget>
-      <action-widget response="0">services_save_button</action-widget>
+      <action-widget response="0">service_save_button</action-widget>
     </action-widgets>
   </object>
   <object class="GtkListStore" id="urls_liststore">
